[tool.poetry]
name = "fastapi-activitypub"
version = "0.1.0"
description = "Ultraminimal Activitypub SDK for FastAPI"
authors = ["sneakers-the-rat <sneakers-the-rat@protonmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/p2p-ld/fastapi-activitypub"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.108.0"
pydantic = "^2.5.3"
pytest = {version = "^7.4.4", optional = true}
sphinx = {version = "^7.2.6", optional = true}
furo = {version = "^2023.9.10", optional = true}
autodoc-pydantic = {version = "^2.0.1", optional = true}
sphinx-autobuild = {version = "^2021.3.14", optional = true}
sphinx-design = {version = "^0.5.0", optional = true}
myst-parser = {version = "^2.0.0", optional = true}


[tool.poetry.extras]
tests = ["pytest"]
docs = ["sphinx", "furo", "autodoc-pydantic", "sphinx-autobuild", "sphinx-design", "myst-parser"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
